# dev.perms.test

./: README.md  build.gradle  clean.cmd  gradle.properties  settings.gradle  start-shizuku.cmd
aidl/: build.gradle
api/: build.gradle
apktool-go/: README.md  build_android.bat  build_android.sh  go.mod  main.go
apktool-go/internal/apk/: build.go  decode.go  framework.go  metadata.go
apktool-go/internal/axml/: debuggable.go  decode.go  manifest_patch.go  (+2 more)
common/: build.gradle
internal_server/: build.gradle
jadx-go/: README.md  build_android.bat  build_android.sh  go.mod  main.go
medit/: BATCH_MODE_NOTES.txt  README.md  go.mod  main.go
medit/cmd/: cmd.go
permstest/: build.gradle
permstest/src/main/cpp/: CMakeLists.txt  capstone_bridge.cpp
plugins/alarms_timers_plugin/: README.txt  plugin.json
plugins/ascii_hex_converter_plugin/: README.txt  plugin.json
plugins/build_prop_test/: README.txt  plugin.json
plugins/calculator_plugin/: README.txt  plugin.json
plugins/declarative_api_demo_plugin/: README.txt  plugin.json  ui.json
plugins/declarative_demo_plugin/: README.txt  plugin.json  ui.json
plugins/device_info_test/: README.txt  plugin.json
plugins/log_snapshot_test/: README.txt  plugin.json
plugins/script_demo_plugin/: README.txt  plugin.json
plugins/script_file_demo_plugin/: README.txt  plugin.json
plugins/trusted_dex_demo_plugin/: README.txt  plugin.json
provider/: build.gradle
rish/: build.gradle
server/: build.gradle
server-shared/: build.gradle
shared/: build.gradle
shell/: build.gradle
starter/: build.gradle
(+510 files in other folders)
